--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
   <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>太郎のポートフォリオ</title>
+    <title>澤口 司のポートフォリオ</title>
     <link rel="icon" href="favicon.ico">
-    <meta name="description" content="太郎のポートフォリオサイトです。">
+    <meta name="description" content="澤口 司のポートフォリオサイトです。">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
       <div class="container"> 
         <div class="icon">
-        <img src="img/taro.png" width="120" height="120" alt="太郎のアイコンです">
+        <img src="My photo.JPG" width="120" height="120" alt="太郎のアイコンです">
         </div>
         <div class="info">
-        <h1>山田太郎</h1>
-        <p>UI/UXデザイナー見習いです。</p>
+        <h1>澤口 司</h1>
+        <p>駆け出しエンジニアです</p>
+        <p>出身は、群馬県伊勢崎市です</p>
+        <p>スキルセット</p>
+        <p>HTML/CSS/Javascript/Vue.js/Wordpress/Scratch</p>
         <ul>
           <li>
-            <a href="http://dotinstall.com" target_blank="_blank">
-            <img src="img/blog.png" width="20" height="20" alt="ブログサイトへのリンク画像です">
+            <a href="https://www.instagram.com/tukasa0710/?hl=ja" target_blank="_blank">
+            <img src="img/blog.png" width="20" height="20" alt="Instagramへのリンク画像です">
             </a>
           </li>
   
           <li>
-            <a href="http://dotinstall.com" target_blank="_blank">
-            <img src="img/photos.png" width="20" height="20" alt="写真サイトへのリンク画像です">
+            <a href="https://twitter.com/tukasa_beginner" target_blank="_blank">
+            <img src="img/photos.png" width="20" height="20" alt="Twitterへのリンク画像です">
             </a>
           </li>
         </ul>
@@ -33,28 +36,34 @@
     </div>
     </header>
 
-    <section>
+    <section class="works">
       <!--作品紹介-->
-      <h1>WORKS</h1>
-    </section>
+      <h1>自己紹介</h1>
+    
     <section>
-      <img src="img/work1.png" width="400" height="260" alt="勇者ゲームの紹介画像">
-      <h3>勇者ゲーム</h3>
-        <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
+      <img src="My photo.JPG" width="400" height="260" alt="勇者ゲームの紹介画像">
+      <h3>経歴・職歴</h3>
+        <p>群馬県内のとある公立高校 卒業</p>
+        <p>国公立大学文系学部 卒業</p>
+        <p>総合病院の医療事務として勤務</p>
     </section>
 
     <section>
-      <img src="img/work2.png" width="400" height="260" alt="勇者ゲームの紹介画像">
-      <h3>宝探しゲーム</h3>
-      <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
+      <img src="woman.jpg" width="400" height="260" alt="勇者ゲームの紹介画像">
+      <h3>現在、学習していること</h3>
+      <p>HTML/CSS/Javascript/Vue.js/Wordpress/Scratch</p>
     </section>
 
       <section>
-        <img src="img/work3.png" width="400" height="260" alt="勇者ゲームの紹介画像">
-        <h3>神経衰弱ゲーム</h3>
-        <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
+        <img src="programming.jpg" width="400" height="260" alt="勇者ゲームの紹介画像">
+        <h3>MENTA・ココナラでの活動</h3>
+        <p>メンター業務を行っております。Scratch/Wordpress/Nocodeを学習したい人はご連絡ください。</p>
+        <ul>
+          <li><a href="https://menta.work/plan/3111">MENTA</a> </li>
+          <li><a href="https://coconala.com/users/348669">ココナラ</a></li>
+        </ul>
       </section>
-
+    </section>
   <footer>
     <p>(c) dotinstall.com</p>
   </footer>
